<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="fiap.scj.casamento.activity.LoginActivity"
        tools:layout_editor_absoluteY="81dp">

    <ImageView
            android:id="@+id/ivLogoSplash"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/logo_splash"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/autenticacao_title"
              android:id="@+id/tvAutenticação"
              android:textSize="32sp"
              android:textStyle="bold"
              app:layout_constraintTop_toBottomOf="@+id/ivLogoSplash"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="8dp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="8dp"/>

    <TextView android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/autenticacao_instrucoes"
              android:id="@+id/tvInsturcoesAutenticação"
              app:layout_constraintTop_toBottomOf="@+id/tvAutenticação"
              android:layout_marginStart="16dp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginEnd="16dp"
              app:layout_constraintStart_toStartOf="parent"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/tilUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInsturcoesAutenticação">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/tilSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilUsuario">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/senha"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
            android:text="@string/manter_conectado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbManterConectado"
            app:layout_constraintTop_toBottomOf="@+id/tilSenha"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"/>

    <Button
            android:text="@string/entrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btEntrar"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cbManterConectado"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <Button
            android:text="@string/cadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:id="@+id/btCadastrar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btEntrar"/>
</android.support.constraint.ConstraintLayout>
