<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_sobre"
        tools:context="fiap.scj.casamento.activity.SobreActivity">

    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSobreTitulo"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_splash"
            android:id="@+id/ivSobreLogo"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSobreTitulo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/desenvolvedor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSobreDesenvolvedorLabel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/ivSobreLogo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="Fernando Teixeira Alves de Araujo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSobreDesenvolvedorNome"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSobreDesenvolvedorLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="@string/versao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSobreVersaoLabel"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSobreDesenvolvedorNome"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>

    <TextView
            android:text="1.0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSobreVersaoNumero"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvSobreVersaoLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
    />
</android.support.constraint.ConstraintLayout>
